--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "layer-search",
+  "name": "researcher",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:inngest": "npx inngest-cli@latest dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -29,20 +28,15 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/edge": "^1.1.1",
     "@vercel/og": "^0.6.2",
-    "@xenova/transformers": "^2.15.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "inngest": "^3.15.4",
-    "jsdom": "^24.0.0",
     "ky": "^1.2.0",
-    "llm-api": "^1.4.1",
+    "llm-api": "^1.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.338.0",
-    "metaphor-node": "^1.0.30",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
-    "node-html-markdown": "^1.3.0",
     "normalize-url": "^8.0.0",
     "p-map": "^7.0.1",
     "p-throttle": "^6.1.0",
@@ -51,25 +45,14 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.8.1",
-    "react-markdown": "^9.0.1",
-    "remark": "^15.0.1",
-    "remark-gemoji": "^8.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1",
-    "remark-math": "^6.0.0",
-    "tailwind-gradient-mask-image": "^1.2.0",
-    "tailwind-scrollbar": "^3.1.0",
     "tlds": "^1.251.0",
     "type-fest": "^4.10.3",
-    "wink-eng-lite-web-model": "^1.5.2",
-    "wink-nlp": "^1.14.3",
     "zod": "^3.22.4",
-    "zod-gpt": "^0.14.0"
+    "zod-gpt": "^0.16.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
